--- a/kubernetes/cloudbuild.yaml
+++ b/kubernetes/cloudbuild.yaml
@@ -6,7 +6,7 @@ metadata:
   name: sample-app
   namespace: default
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: sample-app
@@ -21,6 +21,53 @@ spec:
         app: sample-app
     spec:
       containers:
-        - image: gcr.io/solar-cab-262515/github.com/learnddd/task_manager_api
+        - env:
+            - name: DATASOURCE
+              valueFrom:
+                configMapKeyRef:
+                  key: DATASOURCE
+                  name: sample-app-config-egub
+          image: gcr.io/solar-cab-262515/github.com/learnddd/task_manager_api
           imagePullPolicy: IfNotPresent
           name: task-manager-api-1
+---
+apiVersion: autoscaling/v2beta1
+kind: HorizontalPodAutoscaler
+metadata:
+  labels:
+    app: sample-app
+  name: sample-app-hpa-3jtv
+  namespace: default
+spec:
+  maxReplicas: 5
+  metrics:
+    - resource:
+        name: cpu
+        targetAverageUtilization: 80
+      type: Resource
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: sample-app
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: sample-app
+  name: sample-app-service
+  namespace: default
+spec:
+  clusterIP: 10.169.2.137
+  externalTrafficPolicy: Cluster
+  ports:
+    - nodePort: 30296
+      port: 80
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    app: sample-app
+  sessionAffinity: None
+  type: LoadBalancer
+
