--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -21,5 +21,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DATASOURCE: jdbc:mysql://localhost:3306/task_manager
+      spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+      spring.datasource.url: jdbc:mysql://mysql/task_manager
+      spring.datasource.username: root
+      spring.datasource.password: root
     tty: true
