--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -21,8 +21,5 @@ services:
     ports:
       - "8080:8080"
     environment:
-      spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
-      spring.datasource.url: jdbc:mysql://mysql/task_manager
-      spring.datasource.username: root
-      spring.datasource.password: root
+      DATASOURCE: jdbc:mysql://mysql/task_manager
     tty: true
