--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${DATASOURCE}
 spring.datasource.username=root
 spring.datasource.password=root
+server.port=${PORT:8080}
